# media

./: README.md  pyproject.toml
media/: .celery.log.swp  celerybeat-schedule.db
media/api/: factories.py  models.py  movie.py  schema.py  tasks.py  tests.py
media/api/migrations/: 0001_initial.py  0002_delete_movie.py  0003_initial.py  0004_alter_movie_poster.py  0005_alter_movie_poster.py
media/media/: api.py  celery.py  settings.py  urls.py
